--- a/asset/scss/_common.scss
+++ b/asset/scss/_common.scss
@@ -4,6 +4,7 @@
 $site-color: #959595;
 
 $color-blue: #47aff9;
+$color-d-blue: #3a559f;
 $color-white: #ffffff;
 $color-black: #000;
 $color-light-black: #0b0b0b;
@@ -25,6 +26,14 @@ $color-gray: #f8f8f8;
 	background-image: -webkit-linear-gradient( 33deg, rgb(3,197,207) 0%, rgb(79,172,254) 100%);
 	background-image: -ms-linear-gradient( 33deg, rgb(3,197,207) 0%, rgb(79,172,254) 100%);
 	background-image: linear-gradient( 33deg, rgb(3,197,207) 0%, rgb(79,172,254) 100%);
+}
+
+// @include border-gradient;
+@mixin border-gradient{
+	border-image: -moz-linear-gradient( 33deg, rgb(3,197,207) 0%, rgb(79,172,254) 100%) 1;
+	border-image: -webkit-linear-gradient( 33deg, rgb(3,197,207) 0%, rgb(79,172,254) 100%) 1;
+	border-image: -ms-linear-gradient( 33deg, rgb(3,197,207) 0%, rgb(79,172,254) 100%) 1;
+	border-image: linear-gradient( 33deg, rgb(3,197,207) 0%, rgb(79,172,254) 100%) 1;
 }
 
 // @include common-transition;
@@ -67,7 +76,7 @@ a:hover,
 a:focus{
 	text-decoration: none;
 	outline: none;
-	color: #3a559f;
+	color: $color-d-blue;
 }
 ul{
 	padding: 0;
@@ -374,7 +383,6 @@ p:last-child{
 .btn-radius{
 	border-radius: 0.5rem;
 }
-
 .white-btn{
 	padding: 0.5rem 2rem;
 	background-color: $color-white;
@@ -382,8 +390,18 @@ p:last-child{
 	border-radius: 0.5rem;
 	font-weight: 500;
 	&:hover,&:focus{
-		background-color: #3a559f;
+		background-color: $color-d-blue;
 		color: $color-white;
+	}
+}
+.btn-border{
+	border: 2px solid;
+	@include border-gradient;
+	padding: 5px 10px;
+	color: $color-blue;
+	&:hover,&:focus{
+		color: $color-white;
+		@include bg-gradient;
 	}
 }
 
@@ -493,13 +511,35 @@ p:last-child{
 	}
 }
 
+// common forms form-bx class
+.form-bx{
+	.form-group{
+		margin-bottom: 0;
+	}
+	label{font-weight: 600;}
+	.form-control{
+		border-radius: 0;
+		height: auto;
+		padding: 10px 15px;
+		background-color: #f1f1f1;
+		border: 1px solid #eeeeee;
+		&:focus{
+			border: 1px solid #eeeeee;
+			box-shadow: none;
+		}
+	}
+	textarea.form-control{
+		min-height: 150px;
+	}
+}
+
 //social icons
 .social-links a{
 	font-size: 2rem;
 	margin: 0.5rem 1rem;
 	color: #2b8fc3;
 	&:hover{
-		color: #3a559f;
+		color: $color-d-blue;
 	}
 }
 
@@ -685,7 +725,7 @@ p:last-child{
 	}
 	a{
 		color: $color-white;
-		&:hover,&:focus{color: #3a559f;}
+		&:hover,&:focus{color: $color-d-blue;}
 	}
 	li{
 		a{
