--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -570,6 +570,55 @@ p:last-child {
     -webkit-animation: pulse 5s 1;
     animation: pulse 5s 1; }
 
+.testimonial-bx .img {
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  overflow: hidden;
+  margin: 0 auto; }
+.testimonial-bx .testimonial-txt-slider {
+  padding-top: 3rem; }
+.testimonial-bx .entry-txt {
+  max-width: 800px;
+  margin: 0 auto;
+  font-weight: 600; }
+  .testimonial-bx .entry-txt .desc {
+    margin-bottom: 2rem; }
+  .testimonial-bx .entry-txt .name {
+    margin-bottom: 0.5rem; }
+  .testimonial-bx .entry-txt .desig {
+    font-size: 0.75rem; }
+.testimonial-bx .slick-arrow {
+  height: 60px;
+  width: 60px;
+  line-height: 60px;
+  text-align: center;
+  background-color: #eeeeee;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 100%; }
+.testimonial-bx .slick-arrow:before {
+  display: none; }
+.testimonial-bx .slick-prev {
+  background-image: url("../img/arrow-left.png"); }
+.testimonial-bx .slick-next {
+  background-image: url("../img/arrow-right.png"); }
+
+.testimonial-image-slider .slick-slide .img {
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  transform: scale(0.7); }
+.testimonial-image-slider .slick-slide.slick-center .img {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1); }
+
 .main-header .navbar-brand {
   max-width: 250px; }
 .main-header ul > li {
@@ -596,59 +645,117 @@ p:last-child {
       left: -1.5rem;
       top: 50%;
       transform: translateY(-50%); }
-  .main-header ul > li a.bar-li {
+
+a.bar-li {
+  display: block;
+  padding: 5px 0; }
+  a.bar-li:after {
+    display: none; }
+  a.bar-li span {
     display: block;
-    padding: 5px 0; }
-    .main-header ul > li a.bar-li:after {
-      display: none; }
-    .main-header ul > li a.bar-li span {
-      display: block;
-      height: 3px;
-      width: 40px;
-      background-color: #ffffff;
-      margin: 0.4rem 0; }
-    .main-header ul > li a.bar-li span:first-child {
-      margin: 0; }
-    .main-header ul > li a.bar-li span:last-child {
-      margin: 0; }
+    height: 3px;
+    width: 40px;
+    background-color: #ffffff;
+    margin: 0.4rem 0;
+    position: relative; }
+  a.bar-li span:first-child {
+    margin: 0; }
+  a.bar-li span:last-child {
+    margin: 0; }
 
 .sidenav {
-  height: 100%;
-  width: 0;
+  height: 0;
+  width: 100%;
   position: fixed;
   z-index: 999;
   top: 0;
   left: 0;
-  background-color: #111;
+  right: 0;
   overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-  text-align: center; }
+  background-image: -moz-linear-gradient(33deg, rgba(3, 197, 207, 0.95) 0%, rgba(79, 172, 254, 0.95) 100%);
+  background-image: -webkit-linear-gradient(33deg, rgba(3, 197, 207, 0.95) 0%, rgba(79, 172, 254, 0.95) 100%);
+  background-image: -ms-linear-gradient(33deg, rgba(3, 197, 207, 0.95) 0%, rgba(79, 172, 254, 0.95) 100%);
+  background-image: linear-gradient(33deg, rgba(3, 197, 207, 0.95) 0%, rgba(79, 172, 254, 0.95) 100%);
+  transition: 0.5s; }
 
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s; }
+/* width */
+.sidenav::-webkit-scrollbar {
+  width: 3px; }
+
+/* Track */
+.sidenav::-webkit-scrollbar-track {
+  background: #47aff9; }
+
+/* Handle */
+.sidenav::-webkit-scrollbar-thumb {
+  background: #47aff9; }
+
+/* Handle on hover */
+.sidenav::-webkit-scrollbar-thumb:hover {
+  background: #3a559f; }
 
 .sidenav a:hover {
   color: #f1f1f1; }
 
+.sidenav a {
+  color: #ffffff;
+  font-weight: 600; }
+
+.menu-sec {
+  padding: 70px 0 50px;
+  position: relative; }
+  .menu-sec ul.menu-bx > li {
+    margin-bottom: 2.5rem; }
+    .menu-sec ul.menu-bx > li > a {
+      font-size: 1.5rem;
+      padding: 5px 0;
+      border-bottom: 1px solid #ffffff; }
+  .menu-sec ul.menu-bx .sub-menu {
+    display: none;
+    margin-top: 1rem;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out; }
+  .menu-sec ul.menu-bx .sub-menu.open-menu {
+    opacity: 1; }
+  .menu-sec .icon-toggle {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
+    color: #ffffff;
+    font-size: 1.5rem;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out; }
+  .menu-sec .icon-toggle.open {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg); }
+
 .sidenav .closebtn {
   position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px; }
+  top: 18px;
+  right: 15px; }
 
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px; }
+.closebtn.bar-li span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 15px; }
+.closebtn.bar-li span:nth-child(2) {
+  opacity: 0; }
+.closebtn.bar-li span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: -4px; }
 
-  .sidenav a {
-    font-size: 18px; } }
+/*
+@media screen and (max-width: 450px) {
+	.sidenav {padding-top: 15px;}
+	.sidenav a {font-size: 18px;}
+}
+*/
 .footer-sec,
 .copyright-bx {
   color: #ffffff; }
