--- a/asset/scss/_menu.scss
+++ b/asset/scss/_menu.scss
@@ -1,42 +1,111 @@
 // menu scss
 
-.sidenav {
-	height: 100%;
-	width: 0;
+.sidenav{
+	height: 0;
+	width: 100%;
 	position: fixed;
 	z-index: 999;
 	top: 0;
 	left: 0;
-	background-color: #111;
+	right:0;
 	overflow-x: hidden;
-	transition: 0.5s;
-	padding-top: 60px;
-	text-align:center;
+	background-image: -moz-linear-gradient( 33deg, rgba(3,197,207,0.95) 0%, rgba(79,172,254,0.95) 100%);
+	background-image: -webkit-linear-gradient( 33deg, rgba(3,197,207,0.95) 0%, rgba(79,172,254,0.95) 100%);
+	background-image: -ms-linear-gradient( 33deg, rgba(3,197,207,0.95) 0%, rgba(79,172,254,0.95) 100%);
+	background-image: linear-gradient( 33deg, rgba(3,197,207,0.95) 0%, rgba(79,172,254,0.95) 100%);
+	transition: 0.5s;	
 }
 
-.sidenav a {
-	padding: 8px 8px 8px 32px;
-	text-decoration: none;
-	font-size: 25px;
-	color: #818181;
-	display: block;
-	transition: 0.3s;
+/* width */
+.sidenav::-webkit-scrollbar {
+	width: 3px;
+}
 
+/* Track */
+.sidenav::-webkit-scrollbar-track {
+	background: $color-blue;
+}
+
+/* Handle */
+.sidenav::-webkit-scrollbar-thumb {
+	background: $color-blue;
+}
+
+/* Handle on hover */
+.sidenav::-webkit-scrollbar-thumb:hover {
+	background: $color-d-blue;
 }
 
 .sidenav a:hover{
 	color: #f1f1f1;
 }
 
-.sidenav .closebtn {
-	position: absolute;
-	top: 0;
-	right: 25px;
-	font-size: 36px;
-	margin-left: 50px;
+.sidenav{
+	a{
+		color: $color-white;
+		font-weight: 600;
+	}
+}
+.menu-sec{
+	padding: 70px 0 50px;
+	position: relative;
+	ul.menu-bx{
+		>li{
+			margin-bottom: 2.5rem;
+			//&:last-child{margin-bottom: 0;}
+			>a{
+				font-size: 1.5rem;
+				padding: 5px 0;
+				border-bottom: 1px solid $color-white;
+			}
+		}
+		.sub-menu{
+			display: none;
+			//opacity: 0;
+			margin-top: 1rem;
+			@include common-transition;
+		}
+		.sub-menu.open-menu{
+			//display: block;
+			opacity: 1;
+		}
+	}
+	.icon-toggle{
+		display: inline-block;
+		width: 30px;
+		text-align: center;
+		cursor: pointer;
+		color: $color-white;
+		font-size: 1.5rem;
+		@include common-transition;
+	}
+	.icon-toggle.open{
+		@include transform(rotate(90deg));
+	}
 }
 
-@media screen and (max-height: 450px) {
+.sidenav .closebtn {
+	position: absolute;
+	top: 18px;
+	right: 15px;
+}
+.closebtn.bar-li{
+	span:nth-child(1){
+		transform: rotate(45deg);
+		top:15px;
+	}
+	span:nth-child(2){opacity: 0;}
+	span:nth-child(3){
+		transform: rotate(-45deg);
+		top:-4px;
+	}
+}
+
+
+
+/*
+@media screen and (max-width: 450px) {
 	.sidenav {padding-top: 15px;}
 	.sidenav a {font-size: 18px;}
 }
+*/
