new page and changes

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1192,6 +1192,53 @@ a.bar-li {
   -o-animation: shake 1s 1;
   animation: shake 1s 1; }
 
+.youtube-player {
+  position: relative;
+  padding-bottom: 56.23%;
+  /* Use 75% for 4:3 videos */
+  height: 0;
+  max-width: 100%;
+  background: #000;
+  margin: 5px; }
+
+.youtube-player iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: transparent; }
+
+.youtube-player img {
+  bottom: 0;
+  display: block;
+  left: 0;
+  margin: auto;
+  max-width: 100%;
+  width: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: none;
+  height: auto;
+  cursor: pointer;
+  -webkit-transition: 0.4s all;
+  -moz-transition: 0.4s all;
+  transition: 0.4s all; }
+
+.youtube-player img:hover {
+  -webkit-filter: brightness(75%); }
+
+.youtube-player .play {
+  height: 72px;
+  width: 72px;
+  left: 50%;
+  top: 50%;
+  margin-left: -36px;
+  margin-top: -36px;
+  position: absolute;
+  background: url("//i.imgur.com/TxzC70f.png") no-repeat;
+  cursor: pointer; }
+
 .latest-offers-dv .img {
   width: 200px;
   padding: 15px; }
@@ -1222,6 +1269,59 @@ a.bar-li {
     text-align: center; }
   .calculate-form .input-field .input {
     width: calc(100% - 30px); }
+.calculate-form .input-radio .input {
+  width: 50%; }
+  .calculate-form .input-radio .input label {
+    padding: 10px;
+    background-color: #f1f1f1;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    color: #000; }
+  .calculate-form .input-radio .input input {
+    display: none; }
+  .calculate-form .input-radio .input input:checked + label {
+    background-image: -moz-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+    background-image: -webkit-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+    background-image: -ms-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+    background-image: linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+    color: #ffffff; }
+
+.filter-sec {
+  padding: 2rem 0; }
+  .filter-sec .radio label {
+    cursor: pointer; }
+  .filter-sec .radio input[type="radio"] {
+    position: absolute;
+    opacity: 0; }
+    .filter-sec .radio input[type="radio"] + .radio-label:before {
+      content: '';
+      background: #ffffff;
+      border-radius: 100%;
+      border: 1px solid #959595;
+      display: inline-block;
+      width: 1rem;
+      height: 1rem;
+      position: relative;
+      top: 6px;
+      margin-right: 1em;
+      vertical-align: top;
+      cursor: pointer;
+      text-align: center;
+      transition: all 250ms ease; }
+    .filter-sec .radio input[type="radio"]:checked + .radio-label:before {
+      background-color: #47aff9;
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5); }
+    .filter-sec .radio input[type="radio"]:focus + .radio-label:before {
+      outline: none;
+      border-color: #47aff9; }
+    .filter-sec .radio input[type="radio"]:disabled + .radio-label:before {
+      box-shadow: inset 0 0 0 4px #ffffff;
+      border-color: #bfbfbf;
+      background: #bfbfbf; }
+    .filter-sec .radio input[type="radio"] + .radio-label:empty:before {
+      margin-right: 0; }
 
 .share-link-bx .social-links a:first-child {
   margin-left: 0; }
