--- a/asset/scss/main.scss
+++ b/asset/scss/main.scss
@@ -9,6 +9,7 @@
 @import 'about';
 @import 'contact';
 @import 'awads';
+@import 'career';
 @import 'first-time-buyer';
 @import 'news';
 @import 'conveyancing';
