--- a/asset/scss/_first-time-buyer.scss
+++ b/asset/scss/_first-time-buyer.scss
@@ -42,4 +42,85 @@
 			width: calc(100% - 30px);
 		}
 	}
+
+	.input-radio{
+		.input{
+			width: 50%;
+			label{
+				padding: 10px;
+				background-color: #f1f1f1;
+				width: 100%;
+				text-align: center;
+				cursor: pointer;
+				color: $color-black;
+			}
+			input{display: none;}
+			input:checked+label{
+				@include bg-gradient;
+				color: $color-white;
+			}
+		}
+	}
+}
+
+.filter-sec{
+	padding: 2rem 0;
+	.radio{
+		label{cursor: pointer;}
+		input[type="radio"] {
+			position: absolute;
+			opacity: 0;
+			+ .radio-label {
+				&:before {
+					content: '';
+					background: $color-white;
+					border-radius: 100%;
+					border: 1px solid $site-color;
+					display: inline-block;
+					width: 1rem;
+					height: 1rem;
+					position: relative;
+					top: 6px;
+					margin-right: 1em; 
+					vertical-align: top;
+					cursor: pointer;
+					text-align: center;
+					transition: all 250ms ease;
+				}
+			}
+			&:checked {
+				+ .radio-label {
+					&:before {
+						background-color: $color-blue;
+						border: 1px solid rgba($color-white, 0.5);
+						box-shadow: inset 0 0 0 2px rgba($color-white, 0.5);
+					}
+				}
+			}
+			&:focus {
+				+ .radio-label {
+					&:before {
+						outline: none;
+						border-color: $color-blue;
+					}
+				}
+			}
+			&:disabled {
+				+ .radio-label {
+					&:before {
+						box-shadow: inset 0 0 0 4px $color-white;
+						border-color: darken($color-white, 25%);
+						background: darken($color-white, 25%);
+					}
+				}
+			}
+			+ .radio-label {
+				&:empty {
+					&:before {
+						margin-right: 0;
+					}
+				}
+			}
+		}
+	}
 }
