--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1289,12 +1289,31 @@ a.bar-li {
 
 .filter-sec {
   padding: 2rem 0; }
+  .filter-sec .cat-input {
+    margin-bottom: 1rem; }
+    .filter-sec .cat-input input {
+      display: none; }
+    .filter-sec .cat-input label {
+      padding: 10px;
+      margin-bottom: 0;
+      background-color: #f1f1f1;
+      width: 100%;
+      text-align: center;
+      cursor: pointer;
+      color: #000;
+      border-radius: 1.5rem; }
+    .filter-sec .cat-input input:checked + label {
+      background-image: -moz-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+      background-image: -webkit-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+      background-image: -ms-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+      background-image: linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+      color: #ffffff; }
   .filter-sec .radio label {
     cursor: pointer; }
-  .filter-sec .radio input[type="radio"] {
+  .filter-sec .radio input[type="checkbox"] {
     position: absolute;
     opacity: 0; }
-    .filter-sec .radio input[type="radio"] + .radio-label:before {
+    .filter-sec .radio input[type="checkbox"] + .radio-label:before {
       content: '';
       background: #ffffff;
       border-radius: 100%;
@@ -1309,18 +1328,18 @@ a.bar-li {
       cursor: pointer;
       text-align: center;
       transition: all 250ms ease; }
-    .filter-sec .radio input[type="radio"]:checked + .radio-label:before {
+    .filter-sec .radio input[type="checkbox"]:checked + .radio-label:before {
       background-color: #47aff9;
       border: 1px solid rgba(255, 255, 255, 0.5);
       box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5); }
-    .filter-sec .radio input[type="radio"]:focus + .radio-label:before {
+    .filter-sec .radio input[type="checkbox"]:focus + .radio-label:before {
       outline: none;
       border-color: #47aff9; }
-    .filter-sec .radio input[type="radio"]:disabled + .radio-label:before {
+    .filter-sec .radio input[type="checkbox"]:disabled + .radio-label:before {
       box-shadow: inset 0 0 0 4px #ffffff;
       border-color: #bfbfbf;
       background: #bfbfbf; }
-    .filter-sec .radio input[type="radio"] + .radio-label:empty:before {
+    .filter-sec .radio input[type="checkbox"] + .radio-label:empty:before {
       margin-right: 0; }
 
 .share-link-bx .social-links a:first-child {
