--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -205,6 +205,9 @@ p:last-child {
 .text-black {
   color: #000; }
 
+.text-red {
+  color: #e41d1d; }
+
 .bg-blue {
   background-color: #47aff9; }
 
@@ -274,14 +277,22 @@ p:last-child {
     background-color: #3a559f;
     color: #ffffff; }
 
+.bd {
+  background-image: -moz-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+  background-image: -webkit-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+  background-image: -ms-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+  background-image: linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
+  padding: 2px;
+  display: inline-block;
+  border-radius: 0.3rem; }
+
 .btn-border {
-  border: 2px solid;
-  border-image: -moz-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%) 1;
-  border-image: -webkit-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%) 1;
-  border-image: -ms-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%) 1;
-  border-image: linear-gradient(33deg, #03c5cf 0%, #4facfe 100%) 1;
-  padding: 5px 10px;
-  color: #47aff9; }
+  background-color: #ffffff;
+  padding: 2px 10px;
+  color: #47aff9;
+  border-radius: 0.3rem;
+  min-width: 100px;
+  text-align: center; }
   .btn-border:hover, .btn-border:focus {
     color: #ffffff;
     background-image: -moz-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
@@ -1286,6 +1297,11 @@ a.bar-li {
     background-image: -ms-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
     background-image: linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
     color: #ffffff; }
+
+.filters-title-bx .bot-bar {
+  display: block;
+  margin-top: 10px;
+  background-color: #47aff9; }
 
 .filter-sec {
   padding: 2rem 0; }
