--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -286,7 +286,7 @@ p:last-child {
   background-image: -webkit-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
   background-image: -ms-linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
   background-image: linear-gradient(33deg, #03c5cf 0%, #4facfe 100%);
-  padding: 2px;
+  padding: 1px;
   display: inline-block;
   border-radius: 0.3rem; }
 
@@ -928,7 +928,7 @@ a.bar-li {
   -moz-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
-  min-height: 415px; }
+  min-height: 420px; }
   .work-bx span {
     display: inline-block; }
   .work-bx .icon {
@@ -1405,7 +1405,7 @@ a.bar-li {
   background-color: #eeeeee;
   border-radius: 100%;
   z-index: 99;
-  top: 50%; }
+  top: calc(50% - 10%); }
   .c-review-slider .slick-arrow:before {
     content: '';
     position: absolute;
@@ -1544,7 +1544,10 @@ a.bar-li {
     max-width: 100px; }
 
   .pagination-bx {
-    margin-bottom: 3rem; } }
+    margin-bottom: 3rem; }
+
+  .matching-mortgages-offers {
+    margin-top: 2rem; } }
 @media (max-width: 767px) {
   .h1, h1 {
     font-size: 3rem; }
@@ -1590,10 +1593,26 @@ a.bar-li {
     min-height: 165px; } }
 @media (max-width: 575px) {
   .h1, h1 {
-    font-size: 2.5rem; }
+    font-size: 2.2rem; }
 
   .h2, h2 {
     font-size: 1.3rem; }
+
+  .p-4 {
+    padding: 1rem !important; }
+
+  .btn-large {
+    min-width: 150px;
+    padding: 0.7rem 1.5rem; }
+
+  .white-btn {
+    font-size: 0.75rem;
+    padding: 0.4rem 1.5rem; }
+
+  .common-icon-bx {
+    padding: 1rem; }
+    .common-icon-bx .icon {
+      display: inline-block; }
 
   .main-header .navbar-brand {
     margin: 0 auto 10px; }
@@ -1606,6 +1625,9 @@ a.bar-li {
     margin-bottom: 1rem; }
     .menu-sec ul.menu-bx > li > a {
       font-size: 1.1rem; }
+  .menu-sec .icon-toggle {
+    position: relative;
+    top: 4px; }
 
   a.bar-li {
     margin-left: 1rem; }
@@ -1633,6 +1655,41 @@ a.bar-li {
     right: calc(50% - 150px); }
   .testimonial-bx .entry-txt .desc {
     font-size: 0.75rem;
-    line-height: 1.5rem; } }
+    line-height: 1.5rem; }
+
+  .form-bx .form-control {
+    font-size: 0.875rem; }
+
+  #borrow-calculate-form {
+    margin-bottom: 2.5rem; }
+
+  #bestguys-calculate-form [class*="col-"].mt-5 {
+    margin-top: 0 !important; }
+
+  .footer-top ul > li > a {
+    font-size: 0.75rem;
+    padding: 0.3rem 1rem; }
+
+  .latest-offers-dv .entry-txt {
+    width: 100%;
+    padding: 1.5rem 0 0 !important; }
+
+  .latest-awars .img {
+    border-right: none; }
+  .latest-awars .entry-txt {
+    width: 100%;
+    border-bottom: 5px solid #47aff9; }
+
+  .latest-awars-sec .pagination-bx {
+    margin-bottom: 0; }
+
+  .meet-you-sec .img .row {
+    margin: 0; }
+  .meet-you-sec .img [class*="col-"] {
+    padding: 0; }
+  .meet-you-sec .col-md-6.pl-0 {
+    padding-left: 15px; }
+  .meet-you-sec .img-3 {
+    margin-top: 0; } }
 
 /*# sourceMappingURL=main.css.map */
