--- a/asset/scss/_responsive.scss
+++ b/asset/scss/_responsive.scss
@@ -126,6 +126,9 @@
 	.matching-mortgages-offers{
 		margin-top: 2rem;
 	}
+	.sidebar-sec{
+		margin-top: 2rem;
+	}
 }
 @media (max-width: 767px){
 	.h1, h1{font-size: 3rem;}
@@ -170,7 +173,7 @@
 				min-height: 165px;
 			}
 		}
-	}	 
+	}
 }
 
 @media (max-width: 575px){
