--- a/asset/scss/_responsive.scss
+++ b/asset/scss/_responsive.scss
@@ -134,6 +134,7 @@
 	.h1, h1{font-size: 3rem;}
 	.h2, h2{font-size: 1.5rem;}
 	.h4, h4{font-size: 1rem;}
+	.h5, h5{font-size: 0.875rem;}
 	.main-header{
 		.navbar-brand{max-width: 180px;}
 		ul{
@@ -180,6 +181,7 @@
 	.h1, h1{font-size: 2.2rem;}
 	.h2, h2{font-size: 1.3rem;}
 	.p-4{padding: 1rem!important;}
+	[class*="col-"]:last-child{margin-bottom: 0 !important;}
 	.btn-large{
 		min-width: 150px;
 		padding: 0.7rem 1.5rem;
@@ -242,9 +244,7 @@
 			}
 		}
 	}
-	.form-bx{
-		.form-control{font-size: 0.875rem;}
-	}
+	.form-control{font-size: 0.875rem;}	
 	#borrow-calculate-form{
 		margin-bottom: 2.5rem;
 	}
@@ -283,6 +283,14 @@
 			padding-left: 15px;
 		}
 		.img-3{margin-top: 0;}
+	}
+	.cta-link-sec{
+		.card-header{
+			.d-flex{
+				span{width: calc(100% - 45px);}
+				.icon{width: 35px;}
+			}
+		}
 	}
 }
 
